--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,27 @@ body {
   outline:none;
 }
 
+/*TITLE*/
+h2 {
+  font-weight: 900;
+  font-size: 30px;
+}
+h3 {
+  font-weight: 800;
+  font-size: 25px;
+}
+h4 {
+  font-weight: 600;
+  font-size: 18px;
+}
+
+
 /*BUTTON*/
+/*button je personnalise*/
 .button-custom {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.1rem;
+  font-weight: 600;
   background-color: #F28A2F;
   color: #fff;
   border-radius: 30px;
@@ -17,4 +34,20 @@ body {
 
 .button-custom:hover {
   cursor: pointer;
+}
+
+/*button onglet*/
+.onglets {
+  font-family: 'Montserrat', sans-serif;
+  width: 50%;
+  height: 3rem;
+  background: #0a0a0a;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border:none;
+  font-weight: 600;
+  font-size:1.1rem
 }
