--- a/src/styles/HomeCarousel.css
+++ b/src/styles/HomeCarousel.css
@@ -29,6 +29,11 @@
 .text-slide {
     display: flex;
     flex-direction: column;
+    width: 30%;
+}
+
+.text-slide p {
+    margin-bottom: 2rem;
 }
 
 .img-slide {
