--- a/src/components/Contact/ContactInfo.css
+++ b/src/components/Contact/ContactInfo.css
@@ -1,7 +1,6 @@
 .informations h2 {
-  font-family: 'Rubik';
   font-weight: 600;
-  color: #f28a2f;
+  color: #20124d;
   text-transform: uppercase;
 }
 
