--- a/src/components/Contact/ContactForm.css
+++ b/src/components/Contact/ContactForm.css
@@ -39,13 +39,11 @@
 .FormWrapper h2 {
   display: flex;
   justify-content: center;
-  font-family: 'Rubik', 'Ubuntu', 'Roboto', 'Open Sans', 'Helvetica Neue',
-    sans-serif;
   font-size: 2em;
   font-weight: bold;
   margin-top: 0.25em;
   margin-bottom: 20px;
-  color: #f28a2f;
+  color: #20124d;
 }
 
 .FormWrapper form {
@@ -79,6 +77,7 @@
   border-radius: 8px;
   outline: none;
   border: 1px solid #d6d1d5;
+  width: 100%;
 }
 
 .FormWrapper input:hover,
@@ -92,6 +91,7 @@
   border-radius: 8px;
   outline: none;
   border: 1px solid #d6d1d5;
+  width: 100%;
 }
 
 .FormWrapper textarea::placeholder {
@@ -124,12 +124,15 @@
   margin-top: 0.5em;
   padding: 0.938em;
   border: none;
-  border-radius: 30px;
-  background-color: #f28a2f;
+  border-radius: 10px;
+  background-color: #20124d;
   color: #fefefe;
   font-size: 20px;
-  font-family: 'Rubik';
   font-weight: bold;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 .error {
