--- a/src/components/footer/Banner/Banner.css
+++ b/src/components/footer/Banner/Banner.css
@@ -1,12 +1,19 @@
 .Banner {
-    background-color: #F28A2F;
-    width: 100%;
-    height: 90px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  background-color: #20124d;
+  width: 100%;
+  height: 90px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .IconAndTextContainer {
-    display: flex;
+  display: flex;
+  color: white;
+  align-items: center;
+}
+
+.IconAndTextContainer i {
+  font-size: 2rem;
+  margin-right: 0.5rem;
 }
