--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -12,6 +12,7 @@
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
   border-radius: 10px;
+  z-index: 999;
 }
 
 .Header_logo {
