--- a/src/style/HomeBanner.css
+++ b/src/style/HomeBanner.css
@@ -4,10 +4,10 @@
   margin: auto;
   align-items: center;
   justify-content: center;
-  background-color: #20124d;
+  background-color: #231864;
   color: #fff;
   padding: 1vh;
   text-align: center;
   height: 15vh;
-  margin-top: 100px;
+  margin-top: 14vh;
 }
