--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,6 +1,6 @@
 .Header {
   width: 100%;
-  height: 100px;
+  height: 15vh;
   background-color: #ffffff;
   display: flex;
   align-items: center;
@@ -11,12 +11,12 @@
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
   z-index: 999;
 }
 
 .Header_logo {
-  height: 100px;
+  height: 6rem;
   width: auto;
   padding-left: 50px;
 }
@@ -24,7 +24,7 @@
 .Header_links {
   display: flex;
   justify-content: space-evenly;
-  width: 40vw;
+  width: 50%;
 }
 
 .Header_link {
@@ -34,7 +34,7 @@
 .Header_icons_container {
   display: flex;
   flex-direction: column;
-  height: 100px;
+  height: 6rem100px;
   justify-content: center;
   flex-basis: 30%;
 }
@@ -51,6 +51,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  text-align: center;
 }
 
 .Header_icons_description {
