--- a/src/style/HomeThemeContainer.css
+++ b/src/style/HomeThemeContainer.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-wrap: wrap;
     border-radius: 0 10px 10px;
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.08);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.08);
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.08);
 }
 
 .card-theme {
@@ -26,7 +29,7 @@
     display: block;
     width:100%;
     height: 100%;
-    background-color:  #20124d;
+    background-color:  #e12b4d;
     opacity: 0.3;
     bottom:0;
     left: 0;
@@ -37,8 +40,8 @@
 }
 
 .card-theme:hover h4 {
-    color:#fff2ceff;
-    background-color: #20124d;
+    color:#fff;
+    background-color: #231864;
     padding:1rem
 }
 
@@ -48,7 +51,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff2ceff;
+    background-color: #fff;
     padding:1rem;
     border-radius: 5px;
 }
@@ -67,5 +70,5 @@
 
 .theme-title {
     text-transform: uppercase;
-    color: #20124d;
+    color: #231864;
 }
