--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,10 +1,21 @@
+.Contact {
+  margin:auto;
+  margin-top: 20vh;
+  width:90%;
+  margin-bottom: 3rem;
+}
 .Contact h3 {
   font-weight: bold;
   font-size: 2.5rem;
-  margin-left: 200px;
+  width: 100%;
+  margin: auto;
+  margin-bottom: 2rem;
 }
 
 .ContainerContact {
   display: flex;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  width:100%;
 }
