--- a/src/components/Contact/ContactInfo.css
+++ b/src/components/Contact/ContactInfo.css
@@ -16,9 +16,8 @@
 .LeftPhoneText,
 .LeftMailText {
   text-align: left;
-  width: 45%;
+  width: 50%;
   align-self: center;
-  letter-spacing: 1px;
   font-weight: 600;
 }
 
@@ -55,15 +54,12 @@
   flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin: 100px;
-  width: 480px;
-  max-width: 80%;
-  min-width: 100px;
-  min-height: 760px;
+  width: 35%;
+  min-height: 80vh;
   padding: 20px 40px;
-  border-radius: 6px;
+  border-radius: 10px;
   box-shadow: -1px 1px 20px 0px rgba(0, 0, 0, 0.75);
-  background-color: #fefefe;
+  background-color: #fff;
 }
 
 .Icon {
