--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -58,7 +58,7 @@
 }
 
 .vl {
-  border-left: 2px solid #20124d;
+  border-left: 2px solid #231864;
   height: 280px;
   margin-right: 50px;
 }
@@ -72,7 +72,7 @@
 .IconSocialNetwork {
   font-size: 2rem;
   margin-right: 0.5rem;
-  color: #20124d;
+  color: #231864;
 }
 
 .IconSocialNetwork:hover {
