--- a/src/components/Contact/ContactForm.css
+++ b/src/components/Contact/ContactForm.css
@@ -43,7 +43,7 @@
   font-weight: bold;
   margin-top: 0.25em;
   margin-bottom: 20px;
-  color: #20124d;
+  color: #231864;
 }
 
 .FormWrapper form {
@@ -125,7 +125,7 @@
   padding: 0.938em;
   border: none;
   border-radius: 10px;
-  background-color: #20124d;
+  background-color: #231864;
   color: #fefefe;
   font-size: 20px;
   font-weight: bold;
