--- a/src/style/HomeBanner.css
+++ b/src/style/HomeBanner.css
@@ -4,7 +4,7 @@
   margin: auto;
   align-items: center;
   justify-content: center;
-  background-color: #20124d;
+  background-color: #231864;
   color: #fff;
   padding: 1vh;
   text-align: center;
