--- a/src/style/HomeProductContainer.css
+++ b/src/style/HomeProductContainer.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 
@@ -24,7 +25,7 @@
 
 .active {
     background: #fff2ceff;
-    color: #20124d;
+    color: #231864;
 }
 
 .container-products {
