--- a/src/style/HomeThemeContainer.css
+++ b/src/style/HomeThemeContainer.css
@@ -26,7 +26,7 @@
     display: block;
     width:100%;
     height: 100%;
-    background-color:  #20124d;
+    background-color:  #231864;
     opacity: 0.3;
     bottom:0;
     left: 0;
@@ -38,7 +38,7 @@
 
 .card-theme:hover h4 {
     color:#fff2ceff;
-    background-color: #20124d;
+    background-color: #231864;
     padding:1rem
 }
 
@@ -67,5 +67,5 @@
 
 .theme-title {
     text-transform: uppercase;
-    color: #20124d;
+    color: #231864;
 }
