--- a/src/components/GiftCardPage/CardList.css
+++ b/src/components/GiftCardPage/CardList.css
@@ -1,19 +1,19 @@
 .CardsContainer {
-    display: flex;
-    margin-bottom: 100px;
-    flex-wrap: wrap;
+  display: flex;
+  margin-bottom: 100px;
+  flex-wrap: wrap;
 }
 
 .FinalFilter {
-    margin-top: 200px;
-    margin-left: 50px;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 100px;
-    flex-wrap: wrap;
+  margin-top: 200px;
+  margin-left: 50px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 100px;
+  flex-wrap: wrap;
 }
 
 .FilterShopType {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
