--- a/src/style/AdminShop.css
+++ b/src/style/AdminShop.css
@@ -5,7 +5,6 @@
 }
 
 .cards_online img {
-  width: 25%;
   margin: 1rem;
 }
 
@@ -13,4 +12,25 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.info_adminshop a,
+.cards_online a {
+  text-align: center;
+}
+
+.card_content {
+  border-radius: 10px;
+  border: 0.1rem solid #231864;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+}
+
+.card_content h3 {
+  color: #fff;
+  border-radius: 10px 10px 0 0;
+  padding: 0.5rem;
+  margin: auto;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
