create page type

--- a/src/style/CardProduct.css
+++ b/src/style/CardProduct.css
@@ -1,28 +1,37 @@
 .card-product {
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem;
-    padding: 0 1rem 1rem 1rem;
-    border-radius: 10px;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+  padding: 0 1rem 1rem 1rem;
+  border-radius: 10px;
+  border: 0.05rem solid;
+  background-color: #fff;
+  text-decoration: none;
+}
+
+.card-product h4 {
+  margin: 0;
+  margin-bottom: 0.2rem;
+  text-transform: uppercase;
 }
 .card-product-img {
-    width: 100%;
-    margin: auto;
-    margin-bottom: 0.7rem;
-    object-fit: contain;
+  width: 100%;
+  margin: auto;
+  margin-bottom: 0.7rem;
+  object-fit: contain;
 }
 
 .card-product p {
-    margin:0;
-    margin-bottom:0.5rem
+  margin: 0;
+  margin-bottom: 0.5rem;
 }
 
 .card-product-img:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .card-product .button-custom {
-    margin: auto;
+  margin: auto;
 }
