--- a/src/style/HomeShop.css
+++ b/src/style/HomeShop.css
@@ -5,6 +5,11 @@
   background-color: #fff2ceff;
 }
 
+.shop-slider-container a {
+  text-decoration: none;
+  width: auto !important;
+}
+
 .slick-list,
 .slick-slider,
 .slick-track,
