--- a/src/style/AdminShop.css
+++ b/src/style/AdminShop.css
@@ -24,6 +24,7 @@
   border: 0.1rem solid #231864;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  margin: 0.5rem;
 }
 
 .card_content h3 {
@@ -33,4 +34,9 @@
   margin: auto;
   font-size: 1.2rem;
   font-weight: 500;
+}
+
+.card_content p {
+  color: #fff;
+  margin: 0;
 }
