--- a/src/components/Cart/CartContainer.css
+++ b/src/components/Cart/CartContainer.css
@@ -1,17 +1,30 @@
 .CartContainer {
-    display: flex;
-    flex-direction: row;
-    padding-top: 15vh;
-    padding-bottom: 15vh;
+  display: flex;
+  flex-direction: row;
+  padding-top: 15vh;
+  padding-bottom: 15vh;
 }
 
 .ItemContainer {
-    width: 75%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .CartTotalContainer {
-    width: 25%;
+  width: 25%;
+}
+
+.CartContainer {
+  padding-top: 15vh;
+  min-height: 85vh;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.paniervide p {
+  text-align: center;
 }
