--- a/src/components/Cart/CartItem.css
+++ b/src/components/Cart/CartItem.css
@@ -1,51 +1,64 @@
 .CartItem {
-    width: 75%;
-    height: 300px;
-    border: 1px solid black;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    padding: 5px;
-    margin-bottom:15px;
+  width: 65%;
+  height: auto;
+  border: 1px solid black;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
 .NameAndPrice {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+}
+
+.NameAndPrice h3 {
+  margin-right: 1rem;
 }
 
 .ImageAndDescription {
-    display: flex;
+  display: flex;
+  align-items: center;
 }
 
 .CartItemValue {
-    border: 1px solid #20124d;
-    padding: 15px;
-    border-radius: 10px;;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    margin: 10px;
-    width: 100px;
-    height: 25px;
-    text-align: center;
+  border: 1px solid #20124d;
+  padding: 1rem;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  margin: 10px;
+  width: 100px;
+  height: 25px;
+  text-align: center;
 }
 
 .FirstPart img {
-    width: 300px;
-    height: 175px;
+  width: 300px;
+  height: 175px;
 }
 
 .FirstPart {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .Description {
-    padding: 10px;
+  padding: 0 1.5rem;
+}
+
+.cart-msg h4 {
+  margin: 0;
+  margin-top: 1rem;
+}
+
+.cart-msg p {
+  margin: 0 0.5rem;
 }
