--- a/src/components/Contact/ContactForm.css
+++ b/src/components/Contact/ContactForm.css
@@ -92,6 +92,7 @@
   outline: none;
   border: 1px solid #d6d1d5;
   width: 100%;
+  font-family: 'Montserrat', 'sans-serif';
 }
 
 .FormWrapper textarea::placeholder {
