--- a/src/style/HomeShop.css
+++ b/src/style/HomeShop.css
@@ -2,7 +2,7 @@
   border-radius: 0 10px 10px;
   width: 100%;
   padding: 0.5rem 0;
-  background-color: #fff2ceff;
+  border: 0.1rem solid #231864;
 }
 
 .shop-slider-container a {
@@ -42,7 +42,7 @@
   display: block;
   margin: auto;
   position: unset;
-  width: 50%;
+  width: 10rem;
   height: 15vh;
   object-fit: contain;
 }
