--- a/src/components/GiftCardPage/CardList.css
+++ b/src/components/GiftCardPage/CardList.css
@@ -5,11 +5,9 @@
 }
 
 .FinalFilter {
-  margin-top: 200px;
-  margin-left: 50px;
+  margin-left: 2rem;
   display: flex;
   flex-direction: row;
-  margin-bottom: 100px;
   flex-wrap: wrap;
 }
 
