--- a/src/components/GiftCardPage/CardsContainer.css
+++ b/src/components/GiftCardPage/CardsContainer.css
@@ -1,15 +1,11 @@
 .FilterAndCardsContainer {
-    display: flex;
+  display: flex;
+  width: 90%;
+  margin: auto;
+  padding-top: 15vh;
+  padding-bottom: 15vh;
 }
 
 .FilterContainer {
-    margin-top: 200px;
-    margin-bottom: 100px;
-    border-right: 2px solid #20124d;
+  margin-right: 2rem;
 }
-
-.FilterContainer h3 {
-    margin-left: 35px;
-}
-
-
