--- a/src/components/GiftCardPage/FilterCardContainer.css
+++ b/src/components/GiftCardPage/FilterCardContainer.css
@@ -1,54 +1,45 @@
 .AllOptionContainer {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .OptionContainer {
-    display: flex;
-    flex-direction: column;
-}
-
-.OptionContainer p {
-    margin-left: 10px;
-}
-
-
-.Select {
-    margin-left: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .OptionBox {
-    border: 1px solid #20124d;
-    padding: 15px;
-    border-radius: 10px;;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    cursor: pointer;
-    margin: 10px;
-    width: 125px;
-    text-align: center;
+  border: 1px solid #20124d;
+  padding: 1rem;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  cursor: pointer;
+  margin-bottom: 1rem;
+  width: 125px;
+  text-align: center;
 }
 
-.OptionBox:hover{
-    background-color: #20124d;
-    color: white;
+.OptionBox:hover {
+  background-color: #20124d;
+  color: white;
 }
 
 .Container1 {
-    display: flex;
-    /* justify-content: space-evenly; */
+  display: flex;
+  justify-content: space-between;
 }
 
 .Checked {
-    background-color: #20124d;
-    color: white;
+  background-color: #20124d;
+  color: white;
 }
 
 .BtnContainer {
-    display: flex;
-    justify-content: center;
-    margin-top: 25px;
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
 }
