--- a/src/style/AdminShop.css
+++ b/src/style/AdminShop.css
@@ -25,10 +25,10 @@
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   margin: 0.5rem;
+  background-color: #fff;
 }
 
 .card_content h3 {
-  color: #fff;
   border-radius: 10px 10px 0 0;
   padding: 0.5rem;
   margin: auto;
@@ -37,6 +37,5 @@
 }
 
 .card_content p {
-  color: #fff;
   margin: 0;
 }
